spade-tests/src/snapshots/spade_tests__typeinference__reading_from_tuple_members_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
mod std {mod ports { entity read_port<T>(t: &mut T) -> T __builtin__ }}

use std::ports::read_port;

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: &mut (bool, int<3>)) -> bool {
    let x = inst read_port(val#0);
    let y = inst read_port(val#1);
    takes_normal(x, y)
}


error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:8:28
  │
8 │     let x = inst read_port(val#0);
  │                            ^^^ expected tuple
  │
  = Expected: tuple
  =      Got: &mut (bool, int<3>)


